@@ -14,6 +14,9 @@
   * ``GitClient.fetch_pack`` now returns symrefs.
     (Jelmer Vernooĳ, #485)
 
+  * The server now supports providing symrefs.
+    (Jelmer Vernooĳ, #485)
+
 0.18.2	2017-08-01
 
  TEST FIXES
